Updated notebook header text

--- a/Twitter Streaming API in Python.ipynb
+++ b/Twitter Streaming API in Python.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example we utlise the [Tweepy](https://www.tweepy.org/) library for Python to access Twitter's streaming API to get tweets in real-time. In order to use the Twitter Streaming API you will need to [Apply for a Twitter Developer Account](https://developer.twitter.com/en/application/use-case). You will then need to set up a Twitter appand obtain the authentication credentials that will enable your application to connect to the API. See [Twitter developer apps: Overview](https://developer.twitter.com/en/docs/basics/apps/overview) for further details.\n",
+    "This notebook uses the [Tweepy](https://www.tweepy.org/) library for Python to access Twitter's streaming API to get tweets in real-time. The notebook demonstrates how to access tweets based on user IDs, search terms or by geolocation.\n",
+    "\n",
+    "In order to use the Twitter Streaming API you will need to [Apply for a Twitter Developer Account](https://developer.twitter.com/en/application/use-case). You will then need to set up a Twitter appand obtain the authentication credentials that will enable your application to connect to the API. See [Twitter developer apps: Overview](https://developer.twitter.com/en/docs/basics/apps/overview) for further details.\n",
     "\n",
     "This example is based on a tutorial series [How to use the Twitter API v1.1 with Python to stream tweets](https://youtu.be/pUUxmvvl2FE) by sentdex on Youtube."
    ]
