--- a/Twitter User Details in Python.ipynb
+++ b/Twitter User Details in Python.ipynb
@@ -272,7 +272,7 @@
    "source": [
     "import herepy\n",
     "\n",
-    "geocoderApi = herepy.GeocoderApi('ZhumrLPIpaZVo6WECecO0LPgmCapbt561EKAaeGYBCU')\n",
+    "geocoderApi = herepy.GeocoderApi('')\n",
     "\n",
     "response = geocoderApi.free_form(user.location)"
    ]
